--- a/css/hero.css
+++ b/css/hero.css
@@ -52,8 +52,8 @@
 	width: 100%;
 	min-height: 100%;
 	transition: all 0.3s ease;
-	padding-bottom: 600px;
-	padding-right: 300px;
+	padding-bottom: 400px;
+	padding-left: 600px;
 }
 .stat {
 	grid-area: layer;
